--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
-*.* -diff
+*.tex -diff
+*.txt -diff
+*.py -diff
+*.json -diff
+*.md -diff
