update hw-13 & correct mistakes in math_cmds.tex & add an image to notes

--- a/.github/workflows/compile-pdf.yml
+++ b/.github/workflows/compile-pdf.yml
@@ -30,6 +30,8 @@ jobs:
           root_file: |
             Probability-Notes.tex
             HW/HW-*.tex
+          # extra_system_packages: "inkscape" # Uncomment if there's svg images to compile
+          # latexmk_shell_escape: true
           
       - name: Stash PDF
         id: stash-pdf
